<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mapbox_cameraBearing="0.0"
        app:mapbox_cameraPitch="0.0"
        app:mapbox_cameraTargetLat="-41.2918"
        app:mapbox_cameraTargetLng="174.7842"
        app:mapbox_cameraZoom="5.0"
        app:mapbox_locationComponentEnabled="true"
        app:mapbox_locationComponentPuckBearing="heading"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="64dp">
    </com.mapbox.maps.MapView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.mapbox.dash.sdk.DashNavigationFragment" />

    <ImageView
        android:id="@+id/my_location"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/circle_background"
        android:clickable="true"
        android:contentDescription="@string/content_my_location"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/my_location" />

    <ImageView
        android:id="@+id/layer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/circle_background"
        android:clickable="true"
        android:contentDescription="@string/content_layer"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/layers" />

    <Button
        android:id="@+id/nearest_car_park"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="18dp"
        android:paddingTop="4dp"
        android:paddingRight="18dp"
        android:paddingBottom="4dp"
        android:text="@string/button_car_park"
        app:iconPadding="4dp"
        app:layout_constraintStart_toEndOf="@+id/nearest_vehicle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nearest_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="18dp"
        android:paddingTop="4dp"
        android:paddingRight="18dp"
        android:paddingBottom="4dp"
        android:text="@string/button_vehicle"
        app:iconPadding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>