<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/control_panel"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="420dp"
    android:background="@android:color/white"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="@+id/mapView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/mapView"
    tools:visibility="visible">

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_circle_gray"
        android:contentDescription="@string/button_close"
        android:onClick="onCloseButtonClick"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:src="@drawable/icon_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/map_style"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pic_satellite"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/map_style"
        android:onClick="onSatelliteModeClick"
        android:paddingHorizontal="6dp"
        android:paddingVertical="6dp"
        android:src="@drawable/satellite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_sate"
        app:layout_constraintEnd_toEndOf="@+id/pic_satellite"
        app:layout_constraintStart_toStartOf="@+id/pic_satellite"
        app:layout_constraintTop_toBottomOf="@+id/pic_satellite" />

    <ImageView
        android:id="@+id/pic_standard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/map_style"
        android:onClick="onStandardModeClick"
        android:paddingHorizontal="6dp"
        android:paddingVertical="6dp"
        android:src="@drawable/street"
        app:layout_constraintEnd_toStartOf="@+id/pic_traffic"
        app:layout_constraintStart_toEndOf="@+id/pic_satellite"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_stan"
        app:layout_constraintEnd_toEndOf="@+id/pic_standard"
        app:layout_constraintStart_toStartOf="@+id/pic_standard"
        app:layout_constraintTop_toBottomOf="@+id/pic_standard" />

    <ImageView
        android:id="@+id/pic_traffic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:contentDescription="@string/map_style"
        android:onClick="onTrafficModeClick"
        android:paddingHorizontal="6dp"
        android:paddingVertical="6dp"
        android:src="@drawable/traffic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_traf"
        app:layout_constraintEnd_toEndOf="@+id/pic_traffic"
        app:layout_constraintStart_toStartOf="@+id/pic_traffic"
        app:layout_constraintTop_toBottomOf="@+id/pic_traffic" />

    <Switch
        android:id="@+id/switch_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Dark Mode"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>